Fix spacings

--- a/stylings/main.css
+++ b/stylings/main.css
@@ -525,6 +525,8 @@ h4 {
   border-radius: 10px;
   padding: 20px;
   /* height: 250px; */
+  display: grid;
+  grid-gap: 0.25em;
 }
 .umbrella-project:hover {
   border: 2px solid var(--kh-edge);
@@ -535,6 +537,7 @@ h4 {
 }
 .umbrella-project-title {
   text-transform: uppercase;
+  padding: 0em 0em 0.5em 0em;
 }
 .umbrella-project-image {
   background-position: center;
@@ -549,7 +552,8 @@ h4 {
   box-shadow: 0px 0px 30px var(--kh-edge);
 }
 .umbrella-project-years {
-
+  /* padding: 0.5em 0em 0em 0em; */
+  font-style: italic;
 }
 /* BLOG STYLES */
 .blog-recent {
